glx/tests/invalid/citation-missing-source.glx
# Invalid: Missing required 'source_id' or 'source' field
citations:
  citation-12345678:
    version: "1.0"
    page: "Page 45"
